fix: 로직 수정